# bot

./: .env.example  .gitignore  Aia2tv 2.cs3  LICENSE  README.md  colab_bot.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  site.yml
data/: animewitcher.json  asia2tv.json
reference/: Animewitcher.cs3
scripts/: augment_servers.py  dump_animewitcher.py  dump_asia2tv.py
src/cloudstream_bot/: __init__.py  bot.py  config.py  session.py  urls.py  video.py
src/cloudstream_bot/extractors/: __init__.py  base.py  okru.py  pixeldrain.py
src/cloudstream_bot/handlers/: __init__.py  _paging.py  anime.py  asia.py  common.py
src/cloudstream_bot/i18n/: __init__.py  ar.json  en.json  fr.json
src/cloudstream_bot/scrapers/: __init__.py  animewitcher.py  asia2tv.py
telegram_bot/: __init__.py  bot.py  handlers.py
telegram_bot/scrapers/: animewitcher.py  asia2tv.py
web/: README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/anime/: page.tsx
web/app/anime/[slug]/: page.tsx
web/app/asia/: page.tsx
web/app/asia/[slug]/: page.tsx
web/components/: CatalogGrid.tsx
web/lib/: data.ts  types.ts
