[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudstream-telegram-bot"
version = "0.1.0"
description = "Telegram bot that exposes the Asia2TV and AnimeWitcher Cloudstream plugins as chat commands."
requires-python = ">=3.10"
dependencies = [
    "python-telegram-bot>=21.4,<22",
    "httpx>=0.27,<0.29",
    "beautifulsoup4>=4.12,<5",
]

[tool.setuptools.packages.find]
include = ["telegram_bot*"]

[project.scripts]
cloudstream-telegram-bot = "telegram_bot.bot:main"
